--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap": "^4.5.2",
+        "flexboxgrid": "^6.3.1",
+        "font-awesome": "^4.7.0",
+        "normalize.css": "^8.0.1"
     }
 }
