--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "bootstrap": "^4.5.2",
         "flexboxgrid": "^6.3.1",
         "font-awesome": "^4.7.0",
-        "normalize.css": "^8.0.1"
+        "jquery": "^3.5.1",
+        "normalize.css": "^8.0.1",
+        "popper.js": "^1.16.1"
     }
 }
