Creation de la page d'inscription

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=26c9345ccbded5b10bb47eee58342e83
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://lionel:latouche2020@seymourlionel97@gmail.com@localhost
+MAILER_DSN=smtp://lionel:x@seymourlionel97@gmail.com@localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
