--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "font-awesome": "^4.7.0",
         "jquery": "^3.5.1",
         "normalize.css": "^8.0.1",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "slick-carousel": "^1.8.1"
     }
 }
