--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "easycorp/easyadmin-bundle": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
+        "stof/doctrine-extensions-bundle": "^1.5",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
@@ -20,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/google-mailer": "5.1.*",
         "symfony/http-client": "5.1.*",
         "symfony/intl": "5.1.*",
         "symfony/mailer": "5.1.*",
